@@ -254,8 +254,7 @@ fun bunches_of_metis_methods ctxt needs_full_types needs_lam_defs =
   end
 
 fun bunches_of_smt_methods ctxt =
-  [map (SMT_Method o SMT_Verit) (Verit_Strategies.all_veriT_stgies (Context.Proof ctxt)),
-   [SMT_Method SMT_Z3]]
+  [map (SMT_Method o SMT_Verit) (Verit_Strategies.all_veriT_stgies (Context.Proof ctxt))]
 
 fun bunches_of_proof_methods ctxt smt_proofs needs_full_types needs_lam_defs =
   let
